--- a/views/users.ejs
+++ b/views/users.ejs
@@ -5,10 +5,11 @@
     <title>User List</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bootstrap-table/src/bootstrap-table.css">
-    <link rel="stylesheet" href="//rawgit.com/vitalets/x-editable/master/dist/bootstrap3-editable/css/bootstrap-editable.css">
+    <!--<link rel="stylesheet" href="//rawgit.com/vitalets/x-editable/master/dist/bootstrap3-editable/css/bootstrap-editable.css">-->
+		<link rel="stylesheet" href="assets/bootstrap-table/src/extensions/editable/bootstrap-editable.css">
     <link rel="stylesheet" href="assets/examples.css">
     
-    <script src="//cdn.bootcss.com/jquery/2.2.1/jquery.js" ></script>
+    <script src="assets/jquery.js" ></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
    
   </head>
