更新用户数据库更新及删除部分

--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -61,7 +61,7 @@
 		          <div class="form-suggestion">
 		            	添加一个用户信息
 		          </div>
-		          <form method="post" enctype="multipart/form-data">
+		          <form action="/users/create" method="post" enctype="multipart/form-data">
 		              <div class="input-group">
 		                <span class="input-group-addon">
 		                  <i class="fa fa-user" aria-hidden="true"></i></span>
