--- a/views/users.ejs
+++ b/views/users.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/examples.css">
     
     <script src="/assets/jquery.js" ></script>
+    <!--<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.js"></script>-->
     <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
    
   </head>
