--- a/views/users.ejs
+++ b/views/users.ejs
@@ -16,22 +16,22 @@
   </head>
   <body>
   	<div class="container">
-	    <div id="toolbar">
+	    <div id="toolbar" style="display: none;">
 	        <button id="remove" class="btn btn-danger" disabled>
 	            <i class="glyphicon glyphicon-remove"></i> Delete
 	        </button>
 	    </div>
 	    <table id="table"
 	           data-toolbar="#toolbar"
-	           data-search="true"
-	           data-show-refresh="true"
-	           data-show-toggle="true"
-	           data-show-columns="true"
-	           data-show-export="true"
-	           data-detail-view="true"
+	           data-search="false"
+	           data-show-refresh="false"
+	           data-show-toggle="false"
+	           data-show-columns="false"
+	           data-show-export="false"
+	           data-detail-view="false"
 	           data-detail-formatter="detailFormatter"
 	           data-minimum-count-columns="2"
-	           data-show-pagination-switch="true"
+	           data-show-pagination-switch="false"
 	           data-pagination="true"
 	           data-id-field="_id"
 	           data-page-list="[10, 25, 50, 100, ALL]"
